force-app/main/default/objects/AgentWork/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Agent Work</relationshipLabel>
    <relationshipName>Agent_Work</relationshipName>
    <type>Lookup</type>
</CustomField>