force-app/main/default/objects/AgentWork/fields/HandleTimeDays__c.field-meta.xml
<CustomField>
    <fullName>HandleTimeDays__c</fullName>
    <formula>HandleTime / 86400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handle Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>