force-app/main/default/objects/AgentWork/fields/HandleTimeHours__c.field-meta.xml
<CustomField>
    <fullName>HandleTimeHours__c</fullName>
    <formula>HandleTime / 3600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handle Time (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>