force-app/main/default/objects/AgentWork/fields/HandleTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>HandleTimeMinutes__c</fullName>
    <formula>HandleTime / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handle Time (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>