force-app/main/default/objects/AgentWork/fields/SpeedtoAnswerHours__c.field-meta.xml
<CustomField>
    <fullName>SpeedtoAnswerHours__c</fullName>
    <formula>SpeedToAnswer / 3600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speed to Answer (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>